--- a/car_A-class.html
+++ b/car_A-class.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="car_A-class.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<header>
+<body>
+  <header>
     <div class="header-top">
         <div class="container">
             <div class="header-left">
@@ -30,10 +31,9 @@
             <ul>
                 <li><i class="fa-solid fa-car-rear"></i></li>
                 <li><a href="#">Các dòng xe</a></li>
-                <li><a href="#">Mua trực tuyến</a></li>
-                <li><a href="#">Tư vấn mua xe</a></li>
+                <li><a href="#">Mua phụ tùng</a></li>
+                <li><a href="#">Giá xe</a></li>
                 <li><a href="#">Dịch vụ</a></li>
-                <li><a href="#">Thế giới Mercedes-Benz</a></li>
             </ul>
         </div>
     </nav>
@@ -306,8 +306,6 @@
             </ul>
         </div>
 </footer>
-
-<body>
 
 </body>
 
