--- a/car-Vclass.html
+++ b/car-Vclass.html
@@ -33,11 +33,10 @@
                 <div class="container">
                     <ul>
                         <li><i class="fa-solid fa-car-rear"></i></li>
-                        <li><a href="showRoom-car.html">Các dòng xe</a></li>
-                        <li><a href="#">Mua trực tuyến</a></li>
-                        <li><a href="#">Tư vấn mua xe</a></li>
+                        <li><a href="#">Các dòng xe</a></li>
+                        <li><a href="#">Mua phụ tùng</a></li>
+                        <li><a href="#">Giá xe</a></li>
                         <li><a href="#">Dịch vụ</a></li>
-                        <li><a href="#">Thế giới Mercedes-Benz</a></li>
                     </ul>
                 </div>
             </nav>
