--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
                     <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua trực tuyến</a></li>
-                    <li><a href="#">Tư vấn mua xe</a></li>
+                    <li><a href="#">Mua phụ tùng</a></li>
+                    <li><a href="#">Giá xe</a></li>
                     <li><a href="#">Dịch vụ</a></li>
-                    <li><a href="#">Thế giới Mercedes-Benz</a></li>
                 </ul>
             </div>
         </nav>
