--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua trực tuyến</a></li>
+                    <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
                     <li><a href="#">Tư vấn mua xe</a></li>
                     <li><a href="#">Dịch vụ</a></li>
                     <li><a href="#">Thế giới Mercedes-Benz</a></li>
