--- a/Cabriolet.html
+++ b/Cabriolet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tìm xe mới trong phòng bán trực tuyến | Cửa hàng Mercedes-Benz</title>
+    <title>Car_briolet</title>
     <link rel="stylesheet" href="Cabriolet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -30,10 +30,10 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
+                    <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
