--- a/Purchase/Purchase.html
+++ b/Purchase/Purchase.html
@@ -33,15 +33,14 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="/bighomeworkVA2/showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="#">Mua phụ kiện</a></li>
+                    <li><a href="/bighomeworkVA2/Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="/bighomeworkVA2/preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
     <div class = "body1">
         <h1>Kho phụ tùng ô tô cho xe Mercedes, BMW</h1>
         <p>Chúng tôi luôn có sẵn để đáp ứng cho khách hàng số lượng lớn các phụ tùng ô tô, đặc biệt là phụ tùng ô tô cho xe Mercedes, BMW và luôn không ngừng mở rộng thêm nhiều chủng loại để cung cấp cho quý khách đa dạng sản phẩm cùng với nhiều sự lựa chọn.</p>    
@@ -73,8 +72,6 @@
                 </div>
 
             </h2>
-
-
         
         <div class = "product1">
             <div class = "row">    
