--- a/car-Vclass.html
+++ b/car-Vclass.html
@@ -33,10 +33,10 @@
                 <div class="container">
                     <ul>
                         <li><i class="fa-solid fa-car-rear"></i></li>
-                        <li><a href="#">Các dòng xe</a></li>
-                        <li><a href="#">Mua phụ tùng</a></li>
-                        <li><a href="#">Giá xe</a></li>
-                        <li><a href="#">Dịch vụ</a></li>
+                        <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                        <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
+                        <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                        <li><a href="preferential.html">Dịch vụ</a></li>
                     </ul>
                 </div>
             </nav>
@@ -230,7 +230,6 @@
 
         </main>
 
-
         <footer>
             <div class="footer">
                 <div class="title">
@@ -238,7 +237,7 @@
                 </div>
                 <div class="box-footer">
                     <button>
-                        <p>Đăng ký và nhận quà tặng</p>
+                        <p>Đăng <br> ký và nhận quà tặng</p>
                     </button>
                     <h3>Kết nối với Mercedes-Benz</h3>
                     <h6>Hãy giữ kết nối và nhận ngay quà tặng chính hãng để nâng tầm trải nghiệm dịch vụ.</h6>
@@ -304,16 +303,6 @@
                         <li>Thông tin pháp lý</li>
                     </ul>
                 </div>
-                <div class="box-last">
-                    <h6>[1]MBI là sản phẩm bảo hiểm thiệt hại vật chất mang thương hiệu Mercedes-Benz được cung cấp bởi Công
-                        ty TNHH
-                        Mercedes-Benz Việt Nam và Tổng Công ty Bảo hiểm Bảo Việt hoặc Công ty Bảo hiểm Liberty Việt Nam.
-                    </h6>
-                    <h6>[2]Tính trên chi phí nhân công thực tế theo hóa đơn của Xưởng dịch vụ ủy quyền Mercedes-Benz nhưng
-                        không
-                        vượt quá mức tối đa quy định nêu trên.</h6>
-                </div>
-            </div>
         </footer>
         
         <script src="car-Vclass.js"></script>
