--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
                     <li><i class="fa-solid fa-car-rear"></i></li>
                     <li><a href="showRoom-car.html">Các dòng xe</a></li>
                     <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
-                    <li><a href="#">Tư vấn mua xe</a></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
@@ -114,7 +111,6 @@
                 </div>
 
             </div>
-
             <div class="divMain-img"><img
                     src="https://www.mercedes-benz.com.vn/content/vietnam/vi/passengercars/_jcr_content/root/responsivegrid/hp_campaigns_copy/payload/imageCard5.component.damq1.1720850427598.jpg/2990734_mbc85151.jpg?im=Resize=(433,770)"
                     alt="">
