--- a/insurance.html
+++ b/insurance.html
@@ -32,10 +32,10 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
+                    <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
@@ -55,15 +55,10 @@
                     có chi phí hợp lý và <br>dich vụ giải quyết bồi thường nhanh chóng, chuyên nghiệp <br> được hỗ trợ bởi đối
                     tác bảo hiểm hàng đầu. </p>
                 <button class="button">
-                    <h4>Liên hệ để nhận báo giá</h4>
+                   <a href="onlineservice.html"><h4>Liên hệ để nhận báo giá</h4></a>
                 </button>
             </div>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </main>
     <footer>
         <div class="footer">
