--- a/preferential.html
+++ b/preferential.html
@@ -33,10 +33,10 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
+                    <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
@@ -171,7 +171,7 @@
                     bảo
                     hiểm hàng đầu. </p>
                 <button class="button">
-                    <h4>Tìm hiểu thêm</h4>
+                  <a href="insurance.html"><h4>Tìm hiểu thêm</h4></a>
                 </button>
             </div>
         </div>
