--- a/Purchase_advice/Quotation_sheet/Quotation_sheet.html
+++ b/Purchase_advice/Quotation_sheet/Quotation_sheet.html
@@ -31,10 +31,10 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
+                    <li><a href="/bighomeworkVA2/showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="/bighomeworkVA2/Purchase/Purchase.html">Mua phụ kiện</a></li>
                     <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="/bighomeworkVA2/preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
