--- a/showRoom-car.html
+++ b/showRoom-car.html
@@ -59,10 +59,10 @@
             <div class="container">
                 <ul>
                     <li><i class="fa-solid fa-car-rear"></i></li>
-                    <li><a href="#">Các dòng xe</a></li>
-                    <li><a href="#">Mua phụ tùng</a></li>
-                    <li><a href="#">Giá xe</a></li>
-                    <li><a href="#">Dịch vụ</a></li>
+                    <li><a href="showRoom-car.html">Các dòng xe</a></li>
+                    <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
+                    <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
+                    <li><a href="preferential.html">Dịch vụ</a></li>
                 </ul>
             </div>
         </nav>
@@ -353,7 +353,7 @@
                                     </div>
                                     <div class="aboutCar">
                                         <div class="lis">
-                                            <li>Tìm Hiểu Thêm</li>
+                                            <li><a href="Cabriolet.html">Tìm Hiểu Thêm</a></li>
                                             <li>Thiết kế cấu hình</li>  
                                         </div>
                                         
