--- a/preferential.html
+++ b/preferential.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 </head>
-
+  
 <body>
     <header>
         <div class="header-top">
@@ -24,7 +24,7 @@
                     <button>EN</button>
                     <button>VI</button>
                     <div class="search-bar">
-                        <input type="text" placeholder="Từ khóa tìm kiếm" >
+                        <input type="text" placeholder="Từ khóa tìm kiếm">
                     </div>
                 </div>
             </div>
@@ -36,8 +36,7 @@
                     <li><a href="showRoom-car.html">Các dòng xe</a></li>
                     <li><a href="Purchase/Purchase.html">Mua phụ kiện</a></li>
                     <li><a href="Purchase_advice/Quotation_sheet/Quotation_sheet.html">Giá xe</a></li>
-                    <li><a href="preferential.html">Dịch vụ</a></li>
-                </ul>
+                    <li><a href="#">Dịch vụ</a></li>
             </div>
         </nav>
     </header>
